# dune-bnb

./: CMakeLists.txt  README.md  config.h.cmake  dune-bnb.pc.in  dune.module
cmake/modules/: CMakeLists.txt
dune/: CMakeLists.txt
dune/OCP/: ADMMsolver.hh  ADMMsystem.hh  CMakeLists.txt  Dmax.hh  adjointdriver.hh  adjointheatfem.hh  heatdriver.hh  hfunctions.hh  linearheatfem.hh  probleminterface.hh  switchconstr.hh
dune/bnb/: CMakeLists.txt  OCPDmax.hh  OCPMaster.hh  OCPSub.hh  OCPbranch.hh  bestfirst.h  branching.h  breadthfirst.h  depthfirst.h  enumeration.h  errorfunctions.hh  master.h  subproblem.h
instances/: instances_overview.md
instances/alpha_beta/a1b1/: settings.txt
instances/alpha_beta/a1b2/: settings.txt
instances/alpha_beta/a1b3/: settings.txt
instances/alpha_beta/a2b1/: settings.txt
instances/alpha_beta/a2b2/: settings.txt
instances/alpha_beta/a2b3/: settings.txt
instances/alpha_beta/a3b1/: settings.txt
instances/alpha_beta/a3b2/: settings.txt
instances/alpha_beta/a3b3/: settings.txt
instances/obj_red/red_0/: settings.txt
instances/obj_red/red_2/: settings.txt
instances/obj_red/red_3/: settings.txt
instances/obj_red/red_4/: settings.txt
instances/s1max1/run1/: settings.txt
instances/s1max1/run2/: settings.txt
instances/s1max1/run3/: settings.txt
instances/s1max1/run4/: settings.txt
instances/s1max1/run5/: settings.txt
instances/s2max1/run1/: settings.txt
instances/s2max1/run2/: settings.txt
instances/s2max1/run3/: settings.txt
instances/s2max1/run4/: settings.txt
instances/s2max1/run5/: settings.txt
instances/s2max2/run1/: settings.txt
instances/s2max2/run2/: settings.txt
instances/s2max2/run3/: settings.txt
instances/s2max2/run4/: settings.txt
instances/s2max2/run5/: settings.txt
src/: BnBTest.cc  BnBTest.ini  CMakeLists.txt
src/OCP/: ADMMsolver.cc  CMakeLists.txt  Dmax.cc
src/bnb/: CMakeLists.txt  OCPDmax.cc  OCPMaster.cc  bestfirst.cc  breadthfirst.cc  depthfirst.cc  master.cc
(+118 files in other folders)
