install(FILES bestfirst.h
	      branching.h
	      depthfirst.h
	      breadthfirst.h
	      enumeration.h
	      master.h
	      OCPbranch.hh
	      OCPDmax.hh
	      OCPMaster.hh
	      OCPSub.hh
	      subproblem.h 
	      errorfunctions.hh
 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/OCP/bnb)
 